# drc_sensor_fusion

./: README.md
perception_common/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
perception_common/include/perception_common/: MultisenseBackend.hpp  WRECS_Names.h
perception_common/src/: MultisenseControl.cpp  MultisenseImage.cpp  MultisensePointCloud.cpp
perception_unify_cloud/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
perception_unify_cloud/DepthMapRefinement/: CMakeLists.txt  jointBilateralFilter.cpp  main.cpp  viewSynthesis.cpp
perception_unify_cloud/DepthMapRefinement/DMR/: filter.h
perception_unify_cloud/include/perception_unify_cloud/: LidarGrabber.h  SensorFusion.h  Unifier.h
perception_unify_cloud/launch/: unifier.launch  unifier.launch~
perception_unify_cloud/src/: LidarGrabber.cpp  SensorFusion.cpp  SensorFusion.cpp.orig  Unifier.cpp  assemblePC_color.cpp  filter.cpp  ocu_publisher.cpp  sensorfusion.cpp
sophus/: CMakeLists.txt  README  SophusConfig.cmake  package.xml
sophus/sophus/: se2.cpp  se3.cpp  test_scso3.cpp  test_se2.cpp  test_se3.cpp  test_sim3.cpp  test_so2.cpp  test_so3.cpp
sophus/sophus/sophus/: se2.h  se3.h
visiontools/: CMakeLists.txt  README  package.xml
visiontools/visiontools/: draw2d.cpp  draw3d.cpp  linear_camera.cpp  performance_monitor.cpp  sample.cpp
visiontools/visiontools/visiontools/: draw2d.h  linear_camera.h  performance_monitor.h
wrecs_common/: CMakeLists.txt  package.xml
wrecs_common/include/wrecs_common/: AtlasLimits.h  KDLwrapper.h  WRECS_Common.h  WRECS_Names.h  atlas_joint_limits.hpp  car_commands.h  chainiksolverpos_nr_jl2.h  ladar_distance_filter.h
wrecs_common/meshes/s-model/collision/: Robotiq_fully_open.STL
wrecs_common/meshes/s-model/visual/: Robotiq_fully_open.dae
wrecs_common/src/: KDLwrapper.cpp  WRECS_Common.cpp  atlas_joint_limits.cpp  chainiksolverpos_nr_jl2.cpp  sample_node.cpp  testKDLwrapper.cpp
wrecs_common/urdf/: atlas.urdf.xacro  atlas_foot.urdf  atlas_ocu.urdf.xacro  atlas_offline.urdf.xacro  atlas_skeleton_v3.urdf  atlas_v4.urdf  atlas_v4_for_kdl.urdf  atlas_v4_robotiq_hands.urdf.xacro  atlas_v4_robotiq_hands_offline.urdf.xacro  atlas_v4_robotiq_hands_simple.urdf.xacro  multisense_offline.urdf  multisense_sl_v4.urdf  pipe_hand.urdf.xacro  pipe_hand_left.urdf.xacro  robotiq_hand.urdf.xacro  robotiq_hand_simple_box.urdf.xacro  robotiq_hand_simplified.urdf.xacro  robotiq_hand_simplified_1joint.xacro
wrecs_msgs/: CMakeLists.txt  package.xml
wrecs_msgs/include/wrecs_msgs/: Eigen2RosMsgs.h
wrecs_msgs/msg/: AtlasBatteryStatus.msg  AtlasBehavior.msg  AtlasBehaviorFeedback.msg  AtlasCOM.msg  AtlasErrorStatus.msg  AtlasH264.msg  AtlasJointCtrlParamSet.msg  AtlasJointCtrlParams.msg  AtlasManipFeedback.msg  AtlasManipParams.msg  AtlasPelvisServoParams.msg  AtlasPointStamped.msg  AtlasPumpCtrl.msg  AtlasPumpStatus.msg  AtlasRunState.msg  AtlasSelectedJointStates.msg  AtlasStandFeedback.msg  AtlasStandParams.msg  AtlasStepData.msg  AtlasStepFeedback.msg  AtlasStepIndex.msg  AtlasStepParams.msg  AtlasWalkFeedback.msg  AtlasWalkParams.msg  Contour.msg  ContourList.msg  DebrisMotion.msg  DoorMotion.msg  DrillMotion.msg  DrillShake.msg  DrillWalk.msg  EgressMotion.msg  ExternalOCUMsg.msg  FallState.msg  FallStats.msg  JointTrajectory.msg  JointTrajectoryPoint.msg  LadarFilterDistances.msg  Multisense_Backend_Info.msg  ParameterUpdateRequest.msg  (+33 more)
wrecs_msgs/srv/: AtlasControlSessionRequest.srv  AtlasControllerEnableRequest.srv
